2005-10-13  Carl Worth  <cworth@cworth.org>

	Reviewed by: otaylor

	* configure.in: Increment libtool versioning to 5:0:3 in
	anticipation of 1.2.0 which will add interfaces. The motivation
	for this is to make the 1.1.1 release install a library which will
	be considered newer than 1.0.2.
	
	* Makefile.am: Add a release-verify-soname-major check to verify
	that the soname major number is always 2 as part of the
	release-publish target.

2005-10-12  T Rowley  <tim.rowley@gmail.com>

	Reviewed by: cworth

	* src/cairo-clip.c (_cairo_clip_intersect_mask):  Intersect clip
	region with target surface so we don't waste time and memory.

2005-10-12  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Add extend-reflect to the 1.2.0 roadmap. Mark dashed
	splines and clip-all as fixed.

	* test/Makefile.am:
	* test/extend-reflect.c: (main): Mark extend-reflect as an
	expected failure.

2005-10-12  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore:
	* test/Makefile.am:
	* test/clip-fill-rule-pixel-aligned-ref.png:
	* test/clip-fill-rule-pixel-aligned-rgb24-ref.png:
	* test/clip-fill-rule-pixel-aligned.c: (pixel_aligned_path),
	(draw), (main):
	* test/clip-fill-rule-ps-rgb24-ref.png:
	* test/clip-fill-rule-ref.png:
	* test/clip-fill-rule-rgb24-ref.png:
	* test/clip-fill-rule.c: (star_path), (draw), (main): Add a couple
	of tests to improve our coverage (clipping under both fill rules).

2005-10-12  Carl Worth  <cworth@cworth.org>

	* src/cairo-pdf-surface.c (emit_pattern): Add return value at
	ASSERT_NOT_REACHED.

2005-10-11  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo-pdf-surface.c (emit_surface_pattern),
	(emit_linear_colorgradient), (emit_stiched_colorgradient),
	(emit_pattern_stops):
	Implement non-uniformly spaced color stops for PDF gradients.
	Patch from Jens Taprogge (#4722).

2005-10-10  Billy Biggs  <vektor@dumbterm.net>

	* src/cairo.h: Call it CAIRO_EXTEND_PAD instead of
	CAIRO_EXTEND_NEAREST.

	* src/cairoint.h:
	* src/cairo-glitz-surface.c: